k8s-manifests/overlays/qa/superapp/client/core/patch/qa-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: transaction
        image: harbor.cbe.com.et/cbe-superapp/transaction-qa:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbe-to-cbe
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: cbe-to-cbe
        image: harbor.cbe.com.et/cbe-superapp/cbe-to-cbe-qa:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-request
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: money-request
        image: harbor.cbe.com.et/cbe-superapp/money-request-qa:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-api
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: common-api
        image: harbor.cbe.com.et/cbe-superapp/common-api-qa:latest
        imagePullPolicy: Always
